--- a/pkg/codegen/templates/gorilla/gorilla-register.tmpl
+++ b/pkg/codegen/templates/gorilla/gorilla-register.tmpl
@@ -11,6 +11,15 @@ func wrapHandler(handler http.HandlerFunc, middlewares ...mux.MiddlewareFunc) ht
 	return wrappedHandler
 }
 
+{{ $unauthedExists := false}}
+{{ range . }}
+    {{ $unauth := not .Spec.Security }}
+    {{ if $unauth }}
+        {{ $unauthedExists = true }}
+    {{ end -}}
+{{ end -}}
+
+{{ if not $unauthedExists }}
 // RegisterHandlers registers the api handlers.
 func RegisterHandlers(router *mux.Router, si ServerInterface, opts ...ServerOption) {
     wrapper := ServerInterfaceWrapper{
@@ -34,15 +43,7 @@ func RegisterHandlers(router *mux.Router, si ServerInterface, opts ...ServerOpti
     {{ end -}}
 {{ end -}}
 }
-
-
-{{ $unauthedExists := false}}
-{{ range . }}
-    {{ $unauth := not .Spec.Security }}
-    {{ if $unauth }}
-        {{ $unauthedExists = true }}
-    {{ end -}}
-{{ end -}}
+{{ end }}
 
 {{ if $unauthedExists }}
 // RegisterUnauthedHandlers registers any api handlers which do not have any authentication on them. Most services will not have any.
